# phansora-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  chatterbox_clone.py  constraints-torch.txt  docker-compose.yml  pyproject.toml  requirements.txt
data/chrono_origin/cache/: jesus-christ-facfb59e5c98f025.json  jesus-heals-the-blind-a94b35c889e07fe6.json  moses-and-the-sea-that-was-red-4caf3e574b3bc912.json  moses-parting-the-red-sea-5a752b1458e297c7.json  pizzagate-47aa92509e6c170a.json  sun-god-mithra-0c7cbdacbbd189d7.json  the-tower-of-babel-c4bd25348b8f1fdb.json  twin-towers-7456e00dfb31c36c.json
data/dossier_nova/: embeddings.db
deploy/phansora-api.service.d/: cuda-env.conf
scripts/: install-cuda-toolkit.sh  status-agent.sh
src/phanoris/: __init__.py  cli.py  config.py  main.py
src/phanoris/products/: __init__.py
src/phanoris/products/chrono_origin/: config.py  models.py
src/phanoris/products/dossier_nova/: api.py  config.py  embeddings.py  main.py  toc_generator.py
src/phanoris/products/future_products/: __init__.py
src/phanoris/products/image_tools/: __init__.py
src/phanoris/products/spokenverse/: server.py  worker.py
src/phanoris/shared/: __init__.py  paths.py
src/phanoris/shared/ai/: deepseek.py
src/phanoris/shared/auth/: __init__.py
src/phanoris/shared/billing/: __init__.py
src/phanoris/shared/database/: __init__.py
src/phanoris/shared/queue/: __init__.py
src/phanoris/shared/utils/: __init__.py  chunking.py  naming.py
src/phansora/: __init__.py  cli.py  config.py  main.py
src/phansora/products/: __init__.py
src/phansora/products/book_alchemy/: audio.py  deepseek_client.py  pipeline.py  prompts.py  server.py  storage.py  worker.py
src/phansora/products/chrono_origin/: config.py  models.py  server.py
src/phansora/products/dossier_nova/: __init__.py  api.py  config.py  embeddings.py  main.py  organizer.py  source_profiler.py  synthesis.py  text_cleaner.py  (+2 more)
src/phansora/shared/: __init__.py  contact.py  paths.py
tests/: test_smoke.py
(+76 files in other folders)
