[project]
name = "phanoris-api"
version = "0.1.0"
description = "Phanoris platform API — unified backend for SpokenVerse, Chrono-Origin and Dossier Nova."
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"

# The full, install-order-sensitive dependency set (incl. the torch CUDA index)
# lives in requirements.txt. Install with:  pip install -r requirements.txt
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "aiohttp",
    "tenacity",
    "orjson",
    "anthropic>=0.49",
    "openai>=1.51.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
phanoris = "phanoris.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
